comecei a escrever o conteúdo

--- a/idex.html
+++ b/idex.html
@@ -9,11 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artico 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de HTML5 com CSS3 </h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus beatae, consequatur impedit distinctio nostrum rem qui quis ut repudiandae quo molestias consectetur culpa, sunt necessitatibus suscipit quisquam dolor numquam delectus.</p>
+        </article>
+        <article>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ipsa dolores rem quisquam sed repellat ad dolorem, consequuntur aut voluptatem obcaecati doloribus soluta ipsum perspiciatis amet quibusdam consectetur nulla culpa!</p>
         </article>
     </main>
 </body>
